# python-project-83

./: .flake8  .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: page-analyzer-check.yml
page_analyzer/: app.py  config.py  db.py  models.py  parser.py  web_access_utils.py
page_analyzer/templates/: base.html  header.html  index.html  url.html  urls.html  urls_identity.html
page_analyzer/templates/components/: header.html  messages.html
page_analyzer/templates/errors/: 404.html  500.html  base_error.html
